@@ -4,6 +4,7 @@
     * Fix power panic stuck at Resend
     * Fix startup issues on RPi 5
     * Wait a bit for printer to finish moves after waking up from power panic
+    * Sync files upon Upload finish
 
 0.8.0alpha4
     * Support newer "//action" without the space
